# flowmetry

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile.aggregator  Dockerfile.api  Dockerfile.collector  Dockerfile.registrar  README.md  dashboard.json  docker-compose.prod.yml  docker-compose.test.yml  log_config.json  pyproject.toml  realistic_metrics_generator.py
.github/workflows/: ci.yml
.windsurf/rules/: database-standards.md  docker-standards.md  fastapi-standards.md  python-standards.md
aggregator/: .env.example  config.py  consumer.py  db.py  entrypoint.sh  health_server.py  logging.py  main.py  redis_stream_client.py  schemas.py  worker.py
aggregator/tests/: async_helpers.py  conftest.py  test_db.py  test_health_server.py  test_integration.py  test_log_config_loader.py  test_redis_stream_client.py  test_worker.py
api/: .env.example  config.py  db.py  entrypoint.sh  main.py  prometheus_formatter.py  promql_parser.py  router.py  schemas.py
api/services/: prometheus.py
api/tests/: conftest.py  test_db.py  test_main.py  test_placeholder.py  test_promql_parser.py  test_router.py  test_schemas.py  test_services.py
collector/: .env.example  config.py  converters.py  entrypoint.sh  logging.py  main.py  redis_stream_client.py  router.py
collector/internal/: schemas.py
collector/otlp/: dependencies.py  schemas.py
collector/tests/: test_converters.py  test_otlp_dependencies.py  test_redis_stream_client.py  test_router.py
registrar/: .env.example  entrypoint.sh  manage.py  supervisord.conf
registrar/core/: admin.py  apps.py  middleware.py  models.py
registrar/core/management/commands/: ensure_fk.py
registrar/registrar/: admin_config.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
timescaledb/init/: 01_schema.sql  02_hypertables.sql  03_triggers.sql
